🐛 fix too much margin on post heading

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -568,11 +568,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mt-8 {
   margin-top: 2rem;
 }
+.mt-6 {
+  margin-top: 1.5rem;
+}
 .mt-16 {
   margin-top: 4rem;
-}
-.mt-0 {
-  margin-top: 0px;
 }
 .mb-0 {
   margin-bottom: 0px;
@@ -660,8 +660,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
 }
-
 @media (min-width: 768px) {
+
+  .md\:mt-8 {
+    margin-top: 2rem;
+  }
 
   .md\:mt-16 {
     margin-top: 4rem;
@@ -710,7 +713,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     line-height: 2rem;
   }
 }
-
 @media (min-width: 1024px) {
 
   .lg\:mt-24 {
